Lista de habitos

--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -33,8 +33,10 @@
             <CollectionView x:Name="myLayout">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
+                        <HorizontalStackLayout>
                             <Label Text="{Binding Name}" FontSize="18" />
                             <Label Text="{Binding Count}" FontAttributes="Bold" />
+                        </HorizontalStackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
