--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.MainPage">
+             x:Class="MauiApp1.MainPage"
+             Title="Habitos">
 
     <ScrollView>
         <VerticalStackLayout
@@ -30,23 +31,33 @@
                 x:Name="input"
                 Placeholder="Algo"/>
 
-            <CollectionView x:Name="myLayout">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <HorizontalStackLayout>
-                            <Label Text="{Binding Name}" FontSize="18" />
-                            <Label Text="{Binding Count}" FontAttributes="Bold" />
-                        </HorizontalStackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-            
             <Button
                 x:Name="CounterBtn"
                 Text="Save" 
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Fill" />
+
+            <CollectionView x:Name="myLayout">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <VerticalStackLayout Padding="10">
+                            <Label Text="{Binding Name}" FontSize="18" />
+                            <HorizontalStackLayout>
+                                <Label Text="{Binding Count}" FontSize="17" FontAttributes="Bold" 
+                                    HorizontalOptions="centerAndExpand"
+                                    />
+                                <Button Text="+1"
+                                    Command="{Binding OnCounterHabitoClicked}" 
+                                    FontSize="17" 
+                                    FontAttributes="Bold"
+                                    HorizontalOptions="EndAndExpand" />
+                            </HorizontalStackLayout>
+                        </VerticalStackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            
         </VerticalStackLayout>
     </ScrollView>
 
