--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -27,24 +27,28 @@
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" /> -->
 
             <Border
-                StrokeThickness="2">
-                <Label 
-                    Text="+ Agregar un hábito" 
-                    FontSize="22" 
-                    HorizontalOptions="Start" 
-                    Padding="5"/>
-                <Border
-                StrokeThickness="2">
-                    <Entry
-                        x:Name="input"
-                        Placeholder="Ej. Beber agua"/>
-                </Border>
-                <Button
-                    x:Name="CounterBtn"
-                    Text="Agregar Hábito" 
-                    SemanticProperties.Hint="Counts the number of times you click"
-                    Clicked="GuardarHabitos"
-                    HorizontalOptions="Fill" />
+                StrokeThickness="2"
+                StrokeShape="RoundRectangle 10">
+                <VerticalStackLayout>
+                    <Label 
+                        Text="+ Agregar un hábito" 
+                        FontSize="22" 
+                        HorizontalOptions="Start" 
+                        Padding="5"/>
+                    <Border
+                    StrokeThickness="2"
+                    StrokeShape="RoundRectangle 10">
+                        <Entry
+                            x:Name="input"
+                            Placeholder="Ej. Beber agua"/>
+                    </Border>
+                    <Button
+                        x:Name="CounterBtn"
+                        Text="Agregar Hábito" 
+                        SemanticProperties.Hint="Counts the number of times you click"
+                        Clicked="GuardarHabitos"
+                        HorizontalOptions="Fill" />
+                </VerticalStackLayout>
             </Border>
             <CollectionView x:Name="myLayout">
                 <CollectionView.Header>
@@ -52,19 +56,21 @@
                         Text="Mis Hábitos" 
                         FontSize="22" 
                         FontAttributes="Bold" 
-                        HorizontalOptions="Center" 
+                        HorizontalOptions="Start" 
                         Padding="5"/>
                 </CollectionView.Header>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Border
-                            StrokeThickness="2">
+                            StrokeThickness="2"
+                            StrokeShape="RoundRectangle 10">
                             <VerticalStackLayout Padding="10">
                                 <Label Text="{Binding Name}" FontSize="18" />
                                 <Grid ColumnDefinitions="*,Auto" ColumnSpacing="5">
                                     <Border
                                         StrokeThickness="2"
-                                        BackgroundColor="#FF99EBDA">
+                                        BackgroundColor="#FF99EBDA"
+                                        StrokeShape="RoundRectangle 10">
                                         <Label 
                                             Grid.Column="0" 
                                             Text="{Binding Count}" 
