--- a/MauiApp1/MauiApp1/Resources/Styles/Styles.xaml
+++ b/MauiApp1/MauiApp1/Resources/Styles/Styles.xaml
@@ -14,9 +14,10 @@
     </Style>
 
     <Style TargetType="Border">
-        <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
+        <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource Gray500}}" />
         <Setter Property="StrokeShape" Value="Rectangle"/>
         <Setter Property="StrokeThickness" Value="1"/>
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light=#fbfaf9, Dark=#071518}" />
     </Style>
 
     <Style TargetType="BoxView">
