--- a/MauiApp1/MauiApp1/AppShell.xaml
+++ b/MauiApp1/MauiApp1/AppShell.xaml
@@ -4,7 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiApp1"
-    Title="MauiApp1">
+    Title="Hábitos"
+    Shell.TitleColor="{AppThemeBinding Light=Black, Dark=White}"
+    Shell.BackgroundColor="{AppThemeBinding Light=White, Dark=#08131a}">
 
     <ShellContent
         Title="Contador de hábitos"
