--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -5,41 +5,28 @@
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
+            Padding="12,16"
+            Spacing="20">
 
-            <!-- <Image
-                Source="dotnet_bot.png"
-                HeightRequest="200"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" /> -->
-
-            <!-- <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                x:Name="label1"
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" /> -->
 
             <Border
-                StrokeThickness="2"
-                StrokeShape="RoundRectangle 10">
+                StrokeThickness="1"
+                StrokeShape="RoundRectangle 8"
+                Padding="5"
+                Margin="0,0,0,10">
                 <VerticalStackLayout>
                     <Label 
                         Text="+ Agregar un hábito" 
-                        FontSize="22" 
-                        HorizontalOptions="Start" 
-                        Padding="5"/>
+                        FontSize="22"
+                        TextColor="{AppThemeBinding Light=#949494, Dark=#7fb7b0}"
+                        HorizontalOptions="Start"/>
                     <Border
-                    StrokeThickness="2"
-                    StrokeShape="RoundRectangle 10">
+                    StrokeThickness="1"
+                    StrokeShape="RoundRectangle 8">
                         <Entry
                             x:Name="input"
+                            BorderColor="Transparent"
+                            FontSize="15"
                             Placeholder="Ej. Beber agua"/>
                     </Border>
                     <Button
@@ -50,49 +37,54 @@
                         HorizontalOptions="Fill" />
                 </VerticalStackLayout>
             </Border>
-            <CollectionView x:Name="myLayout">
-                <CollectionView.Header>
-                    <Label 
-                        Text="Mis Hábitos" 
-                        FontSize="22" 
-                        FontAttributes="Bold" 
-                        HorizontalOptions="Start" 
-                        Padding="5"/>
-                </CollectionView.Header>
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Border
-                            StrokeThickness="2"
-                            StrokeShape="RoundRectangle 10">
-                            <VerticalStackLayout Padding="10">
-                                <Label Text="{Binding Name}" FontSize="18" />
-                                <Grid ColumnDefinitions="*,Auto" ColumnSpacing="5">
-                                    <Border
-                                        StrokeThickness="2"
-                                        BackgroundColor="#FF99EBDA"
-                                        StrokeShape="RoundRectangle 10">
-                                        <Label 
-                                            Grid.Column="0" 
-                                            Text="{Binding Count}" 
-                                            FontSize="17" 
-                                            FontAttributes="Bold" 
-                                            HorizontalOptions="Center" />
-                                    </Border>
-                                    <Button
-                                        Text="+1"
-                                        Grid.Column="1"
-                                        CommandParameter="{Binding .}"
-                                        Clicked="OnCounterHabitoClicked" 
-                                        FontSize="17" 
-                                        FontAttributes="Bold"
-                                    />
-                                </Grid>
-                            </VerticalStackLayout>
-                        </Border>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-            
+            <Border
+                StrokeThickness="1"
+                StrokeShape="RoundRectangle 8">
+                <CollectionView x:Name="myLayout">
+                    <CollectionView.Header>
+                        <Label 
+                            Text="Mis Hábitos" 
+                            FontSize="17" 
+                            FontAttributes="Bold" 
+                            HorizontalOptions="Start" 
+                            Padding="5"/>
+                    </CollectionView.Header>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                StrokeThickness="1"
+                                StrokeShape="RoundRectangle 8">
+                                <VerticalStackLayout Padding="10">
+                                    <Label Text="{Binding Name}" FontSize="15" />
+                                    <Grid ColumnDefinitions="*,Auto" ColumnSpacing="5">
+                                        <Border
+                                            StrokeThickness="2"
+                                            BackgroundColor="{AppThemeBinding Light=#ccefeb, Dark=#0e2a2d}"
+                                            StrokeShape="RoundRectangle 10">
+                                            <Label 
+                                                Grid.Column="0" 
+                                                Text="{Binding Count}"
+                                                TextColor="{AppThemeBinding Light=#00b09f, Dark=White}"
+                                                FontSize="15" 
+                                                FontWeight="600"
+                                                HorizontalOptions="Center"
+                                                VerticalOptions="Center"/>
+                                        </Border>
+                                        <Button
+                                            Text="+1"
+                                            Grid.Column="1"
+                                            CommandParameter="{Binding .}"
+                                            Clicked="OnCounterHabitoClicked" 
+                                            FontSize="15" 
+                                            FontWeight="600"
+                                        />
+                                    </Grid>
+                                </VerticalStackLayout>
+                            </Border>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </Border>
         </VerticalStackLayout>
     </ScrollView>
 
