--- a/MauiApp1/MauiApp1/Resources/Styles/Colors.xaml
+++ b/MauiApp1/MauiApp1/Resources/Styles/Colors.xaml
@@ -6,8 +6,8 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="Primary">#24b69a</Color>
-    <Color x:Key="PrimaryDark">#FF99EBDA</Color>
+    <Color x:Key="Primary">#00b09f</Color>
+    <Color x:Key="PrimaryDark">#39c2a6</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#e6fff8</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
