--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -66,7 +66,7 @@
                                                 Text="{Binding Count}"
                                                 TextColor="{AppThemeBinding Light=#00b09f, Dark=White}"
                                                 FontSize="15" 
-                                                FontWeight="600"
+                                                FontAttributes="Bold"
                                                 HorizontalOptions="Center"
                                                 VerticalOptions="Center"/>
                                         </Border>
@@ -76,7 +76,7 @@
                                             CommandParameter="{Binding .}"
                                             Clicked="OnCounterHabitoClicked" 
                                             FontSize="15" 
-                                            FontWeight="600"
+                                            FontAttributes="Bold"
                                         />
                                     </Grid>
                                 </VerticalStackLayout>
