--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -6,23 +6,25 @@
     <ScrollView>
         <VerticalStackLayout
             Padding="12,16"
-            Spacing="20">
+            Spacing="12">
 
 
             <Border
                 StrokeThickness="1"
                 StrokeShape="RoundRectangle 8"
-                Padding="5"
+                Padding="16"
                 Margin="0,0,0,10">
                 <VerticalStackLayout>
                     <Label 
                         Text="+ Agregar un hábito" 
-                        FontSize="22"
+                        FontSize="15"
                         TextColor="{AppThemeBinding Light=#949494, Dark=#7fb7b0}"
                         HorizontalOptions="Start"/>
                     <Border
                     StrokeThickness="1"
-                    StrokeShape="RoundRectangle 8">
+                    StrokeShape="RoundRectangle 8"
+                    Padding="12"
+                    Margin="0,10,0,10">
                         <Entry
                             x:Name="input"
                             Visual="None"
@@ -31,7 +33,10 @@
                     </Border>
                     <Button
                         x:Name="CounterBtn"
-                        Text="Agregar Hábito" 
+                        Text="Agregar Hábito"
+                        FontAttributes="Bold"
+                        FontSize="15"
+                        Padding="12,14"
                         SemanticProperties.Hint="Counts the number of times you click"
                         Clicked="GuardarHabitos"
                         HorizontalOptions="Fill" />
@@ -42,6 +47,10 @@
                 StrokeShape="RoundRectangle 8">
                 <CollectionView x:Name="myLayout">
                     <CollectionView.Header>
+                        <BoxView 
+                            HeightRequest="1"
+                            VerticalOptions="End"
+                            HorizontalOptions="Fill"/>   
                         <Label 
                             Text="Mis Hábitos" 
                             FontSize="17" 
@@ -51,36 +60,43 @@
                     </CollectionView.Header>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Border
-                                StrokeThickness="1"
-                                StrokeShape="RoundRectangle 8">
-                                <VerticalStackLayout Padding="10">
-                                    <Label Text="{Binding Name}" FontSize="15" />
-                                    <Grid ColumnDefinitions="*,Auto" ColumnSpacing="5">
-                                        <Border
-                                            StrokeThickness="2"
-                                            BackgroundColor="{AppThemeBinding Light=#ccefeb, Dark=#0e2a2d}"
-                                            StrokeShape="RoundRectangle 10">
-                                            <Label 
-                                                Grid.Column="0" 
-                                                Text="{Binding Count}"
-                                                TextColor="{AppThemeBinding Light=#00b09f, Dark=White}"
-                                                FontSize="15" 
-                                                FontAttributes="Bold"
-                                                HorizontalOptions="Center"
-                                                VerticalOptions="Center"/>
-                                        </Border>
-                                        <Button
-                                            Text="+1"
-                                            Grid.Column="1"
-                                            CommandParameter="{Binding .}"
-                                            Clicked="OnCounterHabitoClicked" 
+                            <VerticalStackLayout Padding="10" Spacing="5">
+                                <BoxView 
+                                    HeightRequest="1"
+                                    VerticalOptions="End"
+                                    HorizontalOptions="Fill"/>
+
+                                <Label 
+                                    Text="{Binding Name}"
+                                    FontAttributes="Bold" 
+                                    FontSize="15" 
+                                    TextColor="{AppThemeBinding Light=Black, Dark=White}"/>
+
+                                <Grid ColumnDefinitions="*,Auto" ColumnSpacing="5">
+                                    <Border
+                                        StrokeThickness="1"
+                                        Stroke="Transparent"
+                                        BackgroundColor="{AppThemeBinding Light=#ccefeb, Dark=#0e2a2d}"
+                                        StrokeShape="RoundRectangle 10">
+                                        <Label 
+                                            Grid.Column="0" 
+                                            Text="{Binding Count}"
+                                            TextColor="{AppThemeBinding Light=#00b09f, Dark=White}"
                                             FontSize="15" 
                                             FontAttributes="Bold"
-                                        />
-                                    </Grid>
-                                </VerticalStackLayout>
-                            </Border>
+                                            HorizontalOptions="Center"
+                                            VerticalOptions="Center"/>
+                                    </Border>
+                                    <Button
+                                        Text="+1"
+                                        Grid.Column="1"
+                                        Padding="8,10"
+                                        CommandParameter="{Binding .}"
+                                        Clicked="OnCounterHabitoClicked" 
+                                        FontSize="15" 
+                                        FontAttributes="Bold"/>
+                                </Grid>
+                            </VerticalStackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
