--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -75,7 +75,7 @@
                                     FontSize="15" 
                                     TextColor="{AppThemeBinding Light=Black, Dark=White}"/>
 
-                                <Grid ColumnDefinitions="*,Auto" ColumnSpacing="5">
+                                <Grid ColumnDefinitions="*,Auto" ColumnSpacing="8">
                                     <Border
                                         StrokeThickness="1"
                                         Stroke="Transparent"
@@ -98,6 +98,14 @@
                                         Clicked="OnCounterHabitoClicked" 
                                         FontSize="15" 
                                         FontAttributes="Bold"/>
+                                    <ImageButton
+                                        Source="trash.svg"
+                                        Grid.Column="2"
+                                        HeightRequest="12.33"
+                                        TintColor="White"
+                                        BackgroundColor="#ff0000"
+                                        Padding="8,12"
+                                        Clicked="OnDeleteClicked" />
                                 </Grid>
                             </VerticalStackLayout>
                         </DataTemplate>
